# testAUC

./: AUC_issue_example1.py  README.md  example0.py  example1.py  example2.py  example3.py  perturbations_and_colored_roc.ipynb  pyproject.toml
src/: evaluate_auc.py  example3.py
src/testAUC/: __init__.py  evaluate_auc.py  utils.py
