[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "testAUC"
version = "0.0.3"
authors = [
    {name = "Alonhzn", email = "1833092+alonhzn@users.noreply.github.com"},
]
description = "testAUC is a library of tools to evaluate the true performance of ML/AI models"
readme = "README.md"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "scikit-learn",
]